Now you can send an email by clicking in Mail on About MLB

--- a/assets/www/about.html
+++ b/assets/www/about.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 	<title>About MyLittleBusiness</title>
-	<meta name="viewport" content="width=device-width"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	
 	
 	<style type="text/css">
-	
 		a:link {text-decoration: none; color: white; }
 		a:visited {color: white;}
 		a:active {color: white;} 
@@ -15,43 +14,28 @@
 		.mailgit{font-size: small;}
 				
 		body{
-			width:100%;
-			height:100%;
-			margin: auto;
 			color: white;
 			background-color: black;
 			text-align:center;
-			font-family: sans-serif; 
-		}
-
-		#intro{
-		}
-		
-		#authors{
-		}
-		
-		#rights{
-		}		
+			font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+		}	
 	</style>
 	
 </head>
 <body>
-	<!--<img src="logo.png" alt="MyLittleBusinessLogo" />-->
-	<div id="intro">
-		<p>This software is part of a final project for 'Programaci&oacute;n de Aplicaciones para Dispositivos m&oacute;viles'
-		in computer engineering degree by:</p>
-	</div>
-	<div id="authors">
-		<p class="author">Valent&iacute;n Blanco G&oacute;mez</p>
-		<p class="mailgit"><pre><a href="valentin_gomez1@hotmail.com">Mail</a>&#09;<a href="http://github.com/valenbg1">GitHub</a></pre></p>
-		<p class="author">Jes&uacute;s Garc&iacute;a Sojo</p>
-		<p class="mailgit"><pre><a href="jesusggs2@gmail.com">Mail</a>&#09;<a href="https://github.com/jgsojo">GitHub</a></pre></p>
-		<p class="author">Ra&uacute;l Sampedro Ruiz</p>
-		<p class="mailgit"><pre><a href="rsrdesarrollo@gmail.com">Mail</a>&#09;<a href="http://github.com/rsrdesarrollo">GitHub</a></pre></p>
-	</div>
-	<div id="rights">
-		<p>&#169; Team JVR<br>Faculty of Computer Sciences<br>Complutense University of Madrid, 2014.</p>
-	</div>
-	
+	<p>This software is part of a final project for 'Programaci&oacute;n de Aplicaciones para Dispositivos m&oacute;viles'
+	in computer engineering degree by:</p>
+	<br>
+	<br>
+	<p class="author">Valent&iacute;n Blanco G&oacute;mez</p>
+	<p class="mailgit"><pre><a href="mailto:valentin_gomez1@hotmail.com?subject=MyLittleBusiness">Mail</a>&#09;<a href="http://github.com/valenbg1">GitHub</a></pre></p>
+	<p class="author">Jes&uacute;s Garc&iacute;a Sojo</p>
+	<p class="mailgit"><pre><a href="mailto:jesusggs2@gmail.com?subject=MyLittleBusiness">Mail</a>&#09;<a href="https://github.com/jgsojo">GitHub</a></pre></p>
+	<p class="author">Ra&uacute;l Sampedro Ruiz</p>
+	<p class="mailgit"><pre><a href="mailto:rsrdesarrollo@gmail.com?subject=MyLittleBusiness">Mail</a>&#09;<a href="http://github.com/rsrdesarrollo">GitHub</a></pre></p>
+	<br>
+	<br>
+	<p>&#169; Team JVR<br>Faculty of Computer Sciences<br>Complutense University of Madrid, 2014.</p>
+		
 </body>
 </html>
