About HTML page translated to spanish too

--- a/assets/www_es/about.html
+++ b/assets/www_es/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>About My Little Business</title>
+	<title>Sobre My Little Business</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	
 	<style type="text/css">
@@ -22,8 +22,8 @@
 	
 </head>
 <body>
-	<p>This software is part of a final project for 'Programaci&oacute;n de Aplicaciones para Dispositivos m&oacute;viles'
-	in computer engineering degree by:</p>
+	<p>Este software es parte de un proyecto final para Programaci&oacute;n de Aplicaciones para Dispositivos m&oacute;viles 
+	en el Grado de Ingenier&iacutea Inform&aacutetica por:</p>
 	<br>
 	<br>
 	<p class="author">Valent&iacute;n Blanco G&oacute;mez</p>
@@ -34,7 +34,7 @@
 	<p class="mailgit"><pre><a href="mailto:rsrdesarrollo@gmail.com?subject=MyLittleBusiness">Mail</a>&#09;<a href="http://github.com/rsrdesarrollo">GitHub</a></pre></p>
 	<br>
 	<br>
-	<p>GPLv3 - Team JVR<br>Faculty of Computer Sciences<br>Complutense University of Madrid, 2014.</p>
+	<p>GPLv3 - Team JVR<br>Facultad de Inform&aacutetica<br>Universidad Complutense de Madrid, 2014.</p>
 		
 </body>
 </html>
